@@ -69,6 +69,10 @@ class Project(object):
     self._jobs = {}
     self._files = {}
     self.properties = {}
+    logger.debug('%r instantiated.', self)
+
+  def __repr__(self):
+    return '<Project(name=%r, root=%r)>' % (self.name, self.root)
 
   def __str__(self):
     return self.name
@@ -122,7 +126,7 @@ class Project(object):
     destinations than the base root directory.
 
     """
-    logger.debug('adding file %r with archive path %r', path, archive_path)
+    logger.debug('Adding file %r as %r to %r.', path, archive_path, self)
     if not isabs(path):
       if not self.root:
         raise AzkabanError(
@@ -156,6 +160,7 @@ class Project(object):
     if not exists(path):
       raise AzkabanError('File not found: %r.' % (path, ))
     self._files[archive_path] = (path, frozen)
+    logger.info('Added file %r as %r to %r.', path, archive_path, self)
 
   def add_job(self, name, job, **kwargs):
     """Include a job in the project.
@@ -170,11 +175,11 @@ class Project(object):
     `kwargs`). The handler will be called right after the job is added.
 
     """
-    logger.debug('adding job %r', name)
     if not job is self._jobs.get(name, job):
       raise AzkabanError('Inconsistent duplicate job: %r.' % (name, ))
     job.on_add(self, name, **kwargs)
     self._jobs[name] = job
+    logger.info('Added job %r to %r.', name, self)
 
   def merge_into(self, project, overwrite=False, unregister=False):
     """Merge one project with another.
@@ -187,7 +192,7 @@ class Project(object):
     the current project's jobs and files.
 
     """
-    logger.debug('merging into project %r', project.name)
+    logger.debug('Merging %r into %r.', self, project)
     for name, job in self._jobs.items():
       project.add_job(name, job, merging=self)
     for archive_path, (path, frozen) in self._files.items():
@@ -207,7 +212,7 @@ class Project(object):
     :param overwrite: Don't throw an error if a file already exists at `path`.
 
     """
-    logger.debug('building project')
+    logger.debug('Building %r.', self)
     # not using a with statement for compatibility with older python versions
     if exists(path) and not overwrite:
       raise AzkabanError('Path %r already exists.' % (path, ))
@@ -223,10 +228,11 @@ class Project(object):
         with temppath() as fpath:
           job.build(fpath)
           writer.write(fpath, '%s.job' % (name, ))
-      for archive_path, (path, _) in self._files.items():
-        writer.write(path, archive_path)
+      for archive_path, (fpath, _) in self._files.items():
+        writer.write(fpath, archive_path)
     finally:
       writer.close()
+    logger.info('%r successfully built as %r.', self, path)
 
   @classmethod
   def load(cls, path, name=None):
